# sionna-rt-gui

./: .gitignore  CONTRIBUTING.md  README.md  SCENARIOS.md  pyproject.toml  requirements.txt
configs/sionna_rt_gui/: example.yaml
data/envmaps/: README.md
scripts/: common.py  run.py
sionna_rt_gui/: __init__.py
src/sionna_rt_gui/: __init__.py  animation.py  antenna_array.py  config.py  dlpack_utils.py  drjit_util.py  gui.py  ps_utils.py  reload.py  rendering.py  rm_utils.py  selection.py  sionna_utils.py
src/sionna_rt_gui/data/configs/sionna_rt_gui/: base.yaml  example.yaml
test/: test_animation.py  test_config.py  test_drjit_utils.py  test_notebook_config.py  test_polyscope_empty.py  test_rm_utils.py  test_sionna_utils.py
